feat: Add Bank dice game
New game based on ThunderHive Games rules:
- Manual click-to-roll dice mechanics
- Round-based gameplay (10/15/20 rounds)
- 7 ends round (except first 3 rolls = 70 pts protection)
- Doubles double the bank (except first 3 = face value)
- Players can BANK to claim cumulative score

Files added:
- apps/games/Bank/ (index.html, style.css, script.js, readme.md, seeded-tests.spec.js)

Updated:
- index.html: Added Bank card to game hub
- style.css: Added bank-bg gradient
- readme.md: Added Bank to playable games
- tests.md: Added Bank test documentation
- run-all-tests.sh: Added Bank tests to test runner

--- a/index.html
+++ b/index.html
@@ -55,7 +55,21 @@
                 </div>
             </a>
 
+            <!-- Bank -->
+            <a href="apps/games/Bank/index.html" class="game-card">
+                <div class="card-image bank-bg">
+                    <div class="game-icon">🏦</div>
+                </div>
+                <div class="card-content">
+                    <div>
+                        <div class="card-status status-playable">Playable</div>
+                        <h2 class="card-title">Bank</h2>
+                    </div>
+                </div>
+            </a>
+
             <!-- Acquire (Coming Soon) -->
+
             <a href="#" class="game-card coming-soon">
                 <div class="card-image acquire-bg">
                     <div class="game-icon">🏨</div>
