--- a/apps/games/Random Event Dice/index.html
+++ b/apps/games/Random Event Dice/index.html
@@ -237,7 +237,7 @@
             </div>
             <div class="modal-footer">
                 <div class="import-section">
-                    <button id="import-json-btn" class="icon-btn" title="Import Configuration">📥</button>
+                    <button id="import-json-btn" class="icon-btn" title="Import Configuration">📤</button>
                     <input type="file" id="json-file-input" accept=".json" hidden>
                 </div>
                 <div class="save-button-group">
