--- a/index.html
+++ b/index.html
@@ -19,8 +19,7 @@
                 style="color: var(--primary-color); text-decoration: none; display: flex; align-items: center; gap: 0.5rem;">
                 <span>📄</span> Website Overview
             </a>
-            <a href="https://joeywilkes12.github.io/Games-01-public/apps/games/Random%20Event%20Dice/index.html"
-                target="_blank"
+            <a href="https://github.com/JoeyWilkes12/Games-01-public" target="_blank"
                 style="color: var(--primary-color); text-decoration: none; display: flex; align-items: center; gap: 0.5rem;">
                 <span>💻</span> See code here
             </a>
