feat(Bank): Add multi-player banking and fix tests
- Fix window.game exposure for Playwright test access
- Add dropdown player selector for BANK action
- After roll 3, ANY player can bank (not just current roller)
- Dropdown shows only players who haven't banked yet
- Add CSS for bank-action-group and bank-player-select
- Add 4 new multi-player banking tests (28 total passing)
- Update readme with multi-player banking feature docs

Multi-player banking allows strategic discussions about who should
bank when, making the game more interactive for groups.

--- a/apps/games/Bank/index.html
+++ b/apps/games/Bank/index.html
@@ -55,7 +55,19 @@
             <!-- Action Buttons -->
             <div class="action-buttons">
                 <button class="btn btn-roll" id="roll-btn">🎲 Roll Dice</button>
-                <button class="btn btn-bank" id="bank-btn" disabled>🏦 BANK!</button>
+
+                <!-- Multi-player BANK with dropdown -->
+                <div class="bank-action-group" id="bank-action-group">
+                    <select class="bank-player-select" id="bank-player-select" disabled>
+                        <option value="">Select player to BANK</option>
+                    </select>
+                    <button class="btn btn-bank" id="bank-btn" disabled>🏦 BANK!</button>
+                </div>
+            </div>
+
+            <!-- Banking info -->
+            <div class="banking-info" id="banking-info">
+                <span class="info-text">After 3 rolls, any player can BANK!</span>
             </div>
 
             <!-- Current Player Indicator -->
