--- a/apps/games/Bank/index.html
+++ b/apps/games/Bank/index.html
@@ -52,64 +52,93 @@
                 <span class="alert-text" id="alert-text">Seven! Round Over!</span>
             </div>
 
+            <!-- Current Player Indicator (moved above Roll button) -->
+            <div class="current-player-section">
+                <span class="current-label">Current Roller:</span>
+                <span class="current-player-name" id="current-player-name">Player 1</span>
+            </div>
+
             <!-- Action Buttons -->
             <div class="action-buttons">
                 <button class="btn btn-roll" id="roll-btn">🎲 Roll Dice</button>
                 <button class="btn btn-undo" id="undo-btn" disabled title="Undo (Ctrl+Z)">↶ Undo</button>
             </div>
 
-            <!-- Round Statistics -->
-            <div class="round-stats" id="round-stats">
-                <div class="stat">
-                    <span class="stat-label">Survival (no 7)</span>
-                    <span class="stat-value" id="survival-prob">100%</span>
+            <!-- Collapsible Stats Dashboard -->
+            <details class="stats-dashboard" id="stats-dashboard">
+                <summary>📈</summary>
+                <div class="round-stats" id="round-stats">
+                    <div class="stat">
+                        <span class="stat-label">Survival (no 7)</span>
+                        <span class="stat-value" id="survival-prob">100%</span>
+                    </div>
+                    <div class="stat">
+                        <span class="stat-label">Risk per roll</span>
+                        <span class="stat-value">16.67%</span>
+                    </div>
                 </div>
-                <div class="stat">
-                    <span class="stat-label">Risk per roll</span>
-                    <span class="stat-value">16.67%</span>
-                </div>
+            </details>
+
+            <!-- Banking info (hides after roll 3) -->
+            <div class="banking-info" id="banking-info">
+                <span class="info-text">Banking enabled after 3 rolls</span>
             </div>
 
-            <!-- Multi-player BANK Panel -->
-            <div class="bank-action-group disabled" id="bank-action-group">
-                <div class="bank-player-panel disabled" id="bank-player-panel">
-                    <div class="bank-panel-header">
-                        <span>Select players to BANK:</span>
-                        <div class="bank-panel-actions">
-                            <button class="btn-small" id="bank-select-all">All</button>
-                            <button class="btn-small" id="bank-clear-all">Clear</button>
-                        </div>
+            <!-- Collapsible Multi-player BANK Panel -->
+            <details class="bank-action-group disabled" id="bank-action-group">
+                <summary class="bank-panel-summary">
+                    <span>Select players to BANK</span>
+                    <div class="bank-panel-actions">
+                        <button class="btn-small" id="bank-select-all">All</button>
+                        <button class="btn-small" id="bank-clear-all">Clear</button>
                     </div>
+                </summary>
+                <div class="bank-player-panel disabled" id="bank-player-panel">
                     <div class="bank-player-options" id="bank-player-options">
                         <!-- Populated by JavaScript with checkboxes -->
                     </div>
                 </div>
                 <button class="btn btn-bank" id="bank-btn" disabled>🏦 BANK Selected</button>
-            </div>
-
-            <!-- Banking info -->
-            <div class="banking-info" id="banking-info">
-                <span class="info-text">Banking enabled after 3 rolls</span>
-            </div>
+            </details>
 
             <!-- Fallback dropdown (hidden, for backwards compatibility) -->
             <select class="bank-player-select hidden" id="bank-player-select" disabled>
                 <option value="">Select player to BANK</option>
             </select>
-
-            <!-- Current Player Indicator -->
-            <div class="current-player-section">
-                <span class="current-label">Current Roller:</span>
-                <span class="current-player-name" id="current-player-name">Player 1</span>
-            </div>
         </main>
 
         <!-- Players Panel -->
         <aside class="players-panel" id="players-panel">
             <div class="panel-header">
                 <h2>🎯 Scoreboard</h2>
-                <button class="btn-icon" id="toggle-settings" title="Settings">⚙️</button>
+                <div class="panel-controls">
+                    <button class="btn-icon" id="toggle-scoreboard-view" title="Toggle Summary View">📋</button>
+                    <button class="btn-icon" id="toggle-settings" title="Settings">⚙️</button>
+                </div>
             </div>
+
+            <!-- Summary View (hidden by default) -->
+            <div class="summary-scoreboard hidden" id="summary-scoreboard">
+                <div class="summary-current-player">
+                    <h3 id="summary-current-name">--</h3>
+                    <div class="summary-score" id="summary-current-score">0</div>
+                </div>
+                <div class="summary-targets">
+                    <div class="summary-target">
+                        <span class="target-label">To tie next:</span>
+                        <span class="target-value" id="summary-gap-next">--</span>
+                    </div>
+                    <div class="summary-target">
+                        <span class="target-label">To tie leader:</span>
+                        <span class="target-value" id="summary-gap-leader">--</span>
+                    </div>
+                </div>
+                <div class="summary-rankings" id="summary-rankings">
+                    <!-- Populated by JS -->
+                </div>
+            </div>
+
+            <!-- Full Scoreboard (default) -->
             <div class="players-list" id="players-list">
                 <!-- Populated by JavaScript -->
             </div>
@@ -125,6 +154,8 @@
                 <div class="setting-group">
                     <label for="rounds-select">Number of Rounds</label>
                     <select id="rounds-select">
+                        <option value="1">1 Round (Testing)</option>
+                        <option value="5">5 Rounds</option>
                         <option value="10">10 Rounds</option>
                         <option value="15">15 Rounds</option>
                         <option value="20" selected>20 Rounds</option>
@@ -148,6 +179,14 @@
                         <option value="preserve">Preserve (same rolls)</option>
                     </select>
                 </div>
+                <div class="setting-group json-config-group">
+                    <label>Configuration</label>
+                    <div class="json-config-buttons">
+                        <button id="import-json-btn" class="btn-small" title="Import Configuration">📤 Import</button>
+                        <button id="export-json-btn" class="btn-small" title="Export Configuration">📥 Export</button>
+                        <input type="file" id="json-file-input" accept=".json" hidden>
+                    </div>
+                </div>
                 <div class="setting-group">
                     <button class="btn btn-new-game" id="new-game-btn">🎮 New Game</button>
                 </div>
@@ -156,7 +195,8 @@
 
         <!-- Probability Cheatsheet -->
         <details class="probability-cheatsheet" id="probability-cheatsheet">
-            <summary>📊 Dice Probabilities (2d6)</summary>
+            <summary>📊</summary>
+            <h4 class="cheatsheet-title">Dice Probabilities (2d6)</h4>
             <table class="prob-table">
                 <thead>
                     <tr>
