--- a/apps/games/Bank/index.html
+++ b/apps/games/Bank/index.html
@@ -7,11 +7,13 @@
     <title>Bank - Dice Game</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="../home_button_style.css">
+    <link rel="stylesheet" href="../confirm-exit.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
 </head>
 
 <body>
-    <a href="../../../index.html" class="home-button" title="Back to Game Hub">🏠</a>
+    <a href="../../../index.html" class="home-button" id="home-btn" title="Back to Game Hub"
+        onclick="return window.game ? window.game.confirmExit() : true">🏠</a>
 
     <div class="game-container">
         <!-- Header -->
@@ -43,6 +45,24 @@
                     <div class="die" id="die-1">?</div>
                     <div class="die" id="die-2">?</div>
                 </div>
+                <!-- BYOD (Bring Your Own Dice) Input Panel -->
+                <details class="byod-panel hidden" id="byod-panel" open>
+                    <summary class="byod-header">Enter Dice Sum</summary>
+                    <div class="byod-buttons">
+                        <button class="byod-btn" data-sum="2">2</button>
+                        <button class="byod-btn" data-sum="3">3</button>
+                        <button class="byod-btn" data-sum="4">4</button>
+                        <button class="byod-btn" data-sum="5">5</button>
+                        <button class="byod-btn" data-sum="6">6</button>
+                        <button class="byod-btn byod-seven" data-sum="7">7</button>
+                        <button class="byod-btn" data-sum="8">8</button>
+                        <button class="byod-btn" data-sum="9">9</button>
+                        <button class="byod-btn" data-sum="10">10</button>
+                        <button class="byod-btn" data-sum="11">11</button>
+                        <button class="byod-btn" data-sum="12">12</button>
+                        <button class="byod-btn byod-doubles" data-doubles="true">⚀⚀ Doubles</button>
+                    </div>
+                </details>
                 <div class="last-roll-info" id="last-roll-info"></div>
             </div>
 
@@ -168,6 +188,13 @@
                         <option value="preserve">Preserve (same rolls)</option>
                     </select>
                 </div>
+                <div class="setting-group">
+                    <label class="toggle-label">
+                        <input type="checkbox" id="byod-toggle">
+                        <span class="toggle-text">Bring Your Own Dice</span>
+                    </label>
+                    <p class="setting-hint">Use physical dice and enter the sum manually</p>
+                </div>
                 <div class="setting-group json-config-group">
                     <label>Configuration</label>
                     <div class="json-config-buttons">
@@ -269,6 +296,20 @@
                 <div class="final-scores" id="final-scores">
                     <!-- Populated by JavaScript -->
                 </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Exit Confirmation Modal -->
+    <div class="confirm-exit-overlay hidden" id="confirm-exit-modal">
+        <div class="confirm-exit-modal">
+            <div class="confirm-exit-icon">⚠️</div>
+            <div class="confirm-exit-title">Leave Game?</div>
+            <div class="confirm-exit-message">Your current game progress will be lost. Are you sure you want to return
+                to the Game Hub?</div>
+            <div class="confirm-exit-buttons">
+                <button class="confirm-exit-btn btn-stay" id="confirm-stay-btn">Stay</button>
+                <button class="confirm-exit-btn btn-leave" id="confirm-leave-btn">Leave</button>
             </div>
         </div>
     </div>
