--- a/apps/games/Sliding Puzzle 3x3/index.html
+++ b/apps/games/Sliding Puzzle 3x3/index.html
@@ -10,12 +10,14 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Fredoka:wght@400;600&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="../confirm-exit.css">
 </head>
 
 <body>
     <div class="game-container">
         <header>
-            <a href="../../../index.html" class="home-btn" aria-label="Back to Hub">🏠</a>
+            <a href="../../../index.html" class="home-btn" id="home-btn" aria-label="Back to Hub"
+                onclick="return window.confirmGameExit ? window.confirmGameExit() : true">🏠</a>
             <h1>Color Match!</h1>
             <button id="settings-btn" class="settings-icon" aria-label="Settings">⚙️</button>
         </header>
@@ -98,6 +100,20 @@
             <div class="overlay-content">
                 <h2>You Did It! 🎉</h2>
                 <button id="play-again-btn" class="btn-primary">Play Again</button>
+            </div>
+        </div>
+    </div>
+
+    <!-- Exit Confirmation Modal -->
+    <div class="confirm-exit-overlay hidden" id="confirm-exit-modal">
+        <div class="confirm-exit-modal">
+            <div class="confirm-exit-icon">⚠️</div>
+            <div class="confirm-exit-title">Leave Game?</div>
+            <div class="confirm-exit-message">Your current game progress will be lost. Are you sure you want to return
+                to the Game Hub?</div>
+            <div class="confirm-exit-buttons">
+                <button class="confirm-exit-btn btn-stay" id="confirm-stay-btn">Stay</button>
+                <button class="confirm-exit-btn btn-leave" id="confirm-leave-btn">Leave</button>
             </div>
         </div>
     </div>
